[frontend] new: add in-app notifications
